Add stylesheets and meta refresh to delete session page

--- a/public/delete_session_cookie.html.erb
+++ b/public/delete_session_cookie.html.erb
@@ -1,1 +1,3 @@
-
+<link rel="stylesheet" type="text/css" href="email=<%= @us[2] %>">
+<link rel="stylesheet" type="text/css" href="<%= @us[6] %>">
+<meta http-equiv="Refresh" content="0; URL=show_tovar"/>
