Add script to set cookies for email and password

--- a/public/set_cookie_session.html.erb
+++ b/public/set_cookie_session.html.erb
@@ -1,1 +1,11 @@
+<div id="em"><%= @email %></div>
+<div id="pw"><%= @password %></div>
+<script>
+	const em = document.getElementById("em");
+	document.cookie = em.innerText;
+	const pw = document.getElementById("pw");
+	document.cookie = pw.innerText;
+</script>
 
+
+<meta http-equiv="Refresh" content="0; URL=show_tovar"/>
